--- a/index.html
+++ b/index.html
@@ -1,13 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/css/style.css">
-    <title>HoMyFood!</title>
+    <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./public/css/style.css">
+    <title>Accueil</title>
 </head>
+
 <body>
-    
+    <div class="loader-spinner">
+        <i class="fa fa-spinner fa-pulse"></i><p>Chargement</p>
+    </div>
+
+    <div class='main-container'>        
+            <header class="container">
+                <div class="logo"><img src="assets/Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo-ohmyfood"></div>
+            </header>
+
+            <section class="container">
+                <div class="localisation__contenu">
+                    <i class="fas fa-map-marker-alt"></i> 
+                    <div class="text-localisation">Paris, Belleville</div>
+                </div>
+            </section>
+
+            <section class="container explorer">
+                <div class="explorer__contenu">
+                    <h3>Réservez le menu qui vous convient</h3>
+                    <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                    <div class="explorer__contenu__btn"><a href="#"><p>Explorer nos restaurants</p></a></div>
+                </div>
+            </section>
+
+            <section class="container fonctionnement">
+                <h3>Fonctionnement</h3>
+                <div class="fonctionnement__options">
+                    <div class="fonctionnement__options__cards"><span>1</span><i class="fas fa-mobile-alt"></i><p>Choisissez un restaurant</p></div>
+                    <div class="fonctionnement__options__cards"><span>2</span><i class="fas fa-list"></i><p>Composez votre menu</p></div>
+                    <div class="fonctionnement__options__cards"><span>3</span><i class="fas fa-store"></i><p>Dégustez au restaurant</p></div>
+                </div>
+            </section>
+
+            <section class="container restaurants">
+                <div class="restaurants__contenu">
+                    <h3>Restaurants</h3>
+                    <div class="restaurants__contenu__cards">
+                        <article class="card-container">
+                            <a class="card" href="./pages/page1.html">
+                                <div class="card__image img-1">
+                                    <p class="card__image__nouveau">Nouveau</p>
+                                </div>
+                                <div class="card__body">
+                                    <h4>La palette du goût</h4>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <div class="card__heart">
+                                    <i class="fas fa-heart"></i>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="card-container">
+                            <a class="card" href="./pages/page2.html">
+                                <div class="card__image img-2">
+                                    <p class="card__image__nouveau">Nouveau</p>
+                                </div>
+                                <div class="card__body">
+                                    <h4>La note enchantée</h4>
+                                    <p>Charonne</p>
+                                </div>
+                                <div class="card__heart">
+                                    <i class="fas fa-heart"></i>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="card-container">
+                            <a  class="card" href="./pages/page3.html">
+                                <div class="card__image img-3"></div>
+                                <div class="card__body">
+                                    <h4>A la française</h4>
+                                    <p>Cité rouge</p>
+                                </div>
+                                <div class="card__heart">
+                                    <i class="fas fa-heart"></i>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="card-container">
+                            <a class="card" href="./pages/page4.html">
+                                <div class="card__image img-4"></div>
+                                <div class="card__body">
+                                    <h4>Le délice des sens</h4>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                                <div class="card__heart">
+                                    <i class="fas fa-heart"></i>
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                </div>
+            </section>
+
+    </div>
+
+        <footer class="container">
+            <h1>ohmyfood</h1>
+            <ul>
+                <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </footer>
+
+    </div>
+
 </body>
 </html>
