--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
                 <div class="restaurants__contenu">
                     <h3>Restaurants</h3>
                     <div class="restaurants__contenu__cards">
-                        <article class="card-container">
+                        <div class="card-container">
                             <a class="card" href="./pages/page1.html">
-                                <div class="card__image img-1">
+                                <div class="card__image ">
+                                    <img class="img-restaurant" src='./assets/Maquettes/images/restaurants/img1.jpg' />
                                     <p class="card__image__nouveau">Nouveau</p>
                                 </div>
                                 <div class="card__body">
@@ -60,10 +61,11 @@
                                     <i class="fas fa-heart"></i>
                                 </div>
                             </a>
-                        </article>
-                        <article class="card-container">
+                        </div>
+                        <div class="card-container">
                             <a class="card" href="./pages/page2.html">
-                                <div class="card__image img-2">
+                                <div class="card__image ">
+                                    <img class="img-restaurant" src='./assets/Maquettes/images/restaurants/img2.jpg' />
                                     <p class="card__image__nouveau">Nouveau</p>
                                 </div>
                                 <div class="card__body">
@@ -74,10 +76,12 @@
                                     <i class="fas fa-heart"></i>
                                 </div>
                             </a>
-                        </article>
-                        <article class="card-container">
+                        </div>
+                        <div class="card-container">
                             <a  class="card" href="./pages/page3.html">
-                                <div class="card__image img-3"></div>
+                                <div class="card__image ">
+                                    <img class="img-restaurant" src='./assets/Maquettes/images/restaurants/img3.jpg' />
+                                </div>
                                 <div class="card__body">
                                     <h4>A la française</h4>
                                     <p>Cité rouge</p>
@@ -86,10 +90,12 @@
                                     <i class="fas fa-heart"></i>
                                 </div>
                             </a>
-                        </article>
-                        <article class="card-container">
+                        </div>
+                        <div class="card-container">
                             <a class="card" href="./pages/page4.html">
-                                <div class="card__image img-4"></div>
+                                <div class="card__image">
+                                    <img class="img-restaurant" src='./assets/Maquettes/images/restaurants/img4.jpg' />
+                                </div>
                                 <div class="card__body">
                                     <h4>Le délice des sens</h4>
                                     <p>Folie-Méricourt</p>
@@ -98,7 +104,7 @@
                                     <i class="fas fa-heart"></i>
                                 </div>
                             </a>
-                        </article>
+                        </div>
                     </div>
                 </div>
             </section>
