--- a/menu1.html
+++ b/menu1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./public/css/style.css">
     <title>La palette du goût - Ménilmontant</title>
 </head>
 <body>
@@ -16,13 +16,13 @@
                 <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
             <div class="logo">
-                <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+                <img src="./assets/Maquettes/images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
             </div>
         </header>
 
         <!-- Section 1 -->
         <section class="container illustration">
-            <img class="illustration__image"src="../assets/images/restaurants/img-1.jpg" alt="assiette de poisson vue de profil">
+            <img class="illustration__image" src="../assets/Maquettes/images/restaurants/img4.jpg" alt="assiette de poisson vue de profil">
             <div class="illustration__body">
                 <h2>La palette du goût</h2>
                 <i class="fas fa-heart"></i>
