--- a/pages/menu2.html
+++ b/pages/menu2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
     <title>La note enchantée - Charonne</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
 
         <!-- Section 1 -->
         <section class="container illustration">
-            <img class="illustration__image"src="../assets/images/restaurants/img-2.jpg" alt="Deux assiettes vue du dessus">
+            <img class="illustration__image"src="../assets/images/restaurants/img2.jpg" alt="Deux assiettes vue du dessus">
             <div class="illustration__body">
                 <h2>La note enchantée</h2>
                 <i class="fas fa-heart"></i>
