--- a/pages/menu1.html
+++ b/pages/menu1.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./public/css/style.css">
-    <title>Le délice des sens - Folie-Méricourt</title>
+    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="shortcut icon" href="../assets/images/logo/ohmyfood@2x.svg">
+    <title>La palette du goût - Ménilmontant</title>
 </head>
 <body>
-    <div class="wrapper">
-
-        <!-- En-tête -->
+    <div class="main-container">
         <header class="container">
             <div class="arrow">
                 <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
@@ -21,27 +20,24 @@
             </div>
         </header>
 
-        <!-- Section 1 -->
         <section class="container illustration">
-            <img class="illustration__image"src="../assets/images/restaurants/img-4.jpg" alt="Assiette de poisson rectangulaire">
+            <img class="illustration__image" src="../assets/images/restaurants/img1.jpg" alt="assiette de poisson vue de profil">
             <div class="illustration__body">
-                <h2>Le délice des sens</h2>
+                <h2>La palette du goût</h2>
                 <i class="fas fa-heart"></i>
             </div>
         </section>
 
-        <!-- Section 2 -->
         <section class="container menu">
 
-            <!-- Entrées-->
             <div class="menu__starter">
                 <h5 class="menu__title"><span>Entr</span>ées</h5>
 
                 <article class="menu__card card-1">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Tartare de thon</h4>
+                        <h4 class="menu__card__body__title">Fricassée d'escargot</h4>
                         <div class="menu__card__body__description">
-                            <p>Assaisonné au yuzu</p>
+                            <p>Au piment d'espelette</p>
                             <span>25€</span>
                         </div>
                     </div>
@@ -52,9 +48,9 @@
 
                 <article class="menu__card card-2">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Bouchée de homard croustillant</h4>
+                        <h4 class="menu__card__body__title">Foie gras de canard mi-cuit</h4>
                         <div class="menu__card__body__description">
-                            <p>Et sa farandole de petits légumes</p>
+                            <p>Et ses copeaux de truffe noire</p>
                             <span>35€</span>
                         </div>
                     </div>
@@ -65,9 +61,9 @@
 
                 <article class="menu__card card-3">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Velouté de cèpes</h4>
+                        <h4 class="menu__card__body__title">Oeuf au plat</h4>
                         <div class="menu__card__body__description">
-                            <p>Aux truffes</p>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
                             <span>20€</span>
                         </div>
                     </div>
@@ -77,15 +73,14 @@
                 </article>
             </div>
 
-            <!-- Plats-->
             <div class="menu__main">
                 <h5 class="menu__title"><span>Plat</span>s</h5>
 
                 <article class="menu__card card-4">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Poulet rôti aux herbes de Provence</h4>
+                        <h4 class="menu__card__body__title">Filet de boeuf aux herbes</h4>
                         <div class="menu__card__body__description">
-                            <p>Et sa crème de truffe</p>
+                            <p>Accompagné de sa ribambelle de légumes</p>
                             <span>40€</span>
                         </div>
                     </div>
@@ -96,9 +91,9 @@
 
                 <article class="menu__card card-5">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Langouste rôtie</h4>
+                        <h4 class="menu__card__body__title">Parmentier de queue de boeuf</h4>
                         <div class="menu__card__body__description">
-                            <p>Et ses légumes de saison</p>
+                            <p>À la truffe noire sur sa purée de panais</p>
                             <span>35€</span>
                         </div>
                     </div>
@@ -109,9 +104,9 @@
 
                 <article class="menu__card card-6">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Côte de boeuf Angus</h4>
+                        <h4 class="menu__card__body__title">Filet de turbot</h4>
                         <div class="menu__card__body__description">
-                            <p>Et sa purée de panais</p>
+                            <p>Aux agrumes</p>
                             <span>44€</span>
                         </div>
                     </div>
@@ -121,15 +116,14 @@
                 </article>
             </div>
 
-            <!-- Desserts-->
             <div class="menu__dessert">
                 <h5 class="menu__title"><span>Dess</span>erts</h5>
 
                 <article class="menu__card card-7">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Farandole de desserts</h4>
+                        <h4 class="menu__card__body__title">Paris-Brest</h4>
                         <div class="menu__card__body__description">
-                            <p>Du chef</p>
+                            <p>Revisité</p>
                             <span>18€</span>
                         </div>
                     </div>
@@ -140,9 +134,9 @@
 
                 <article class="menu__card card-8">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Crème brulée</h4>
+                        <h4 class="menu__card__body__title">Macaron au chocolat d'exception</h4>
                         <div class="menu__card__body__description">
-                            <p>Revisitée</p>
+                            <p>Et glace à la vanille de Madagascar</p>
                             <span>22€</span>
                         </div>
                     </div>
@@ -153,9 +147,9 @@
 
                 <article class="menu__card card-9">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Tiramisu</h4>
+                        <h4 class="menu__card__body__title">Mousse au chocolat</h4>
                         <div class="menu__card__body__description">
-                            <p>À la noisette</p>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
                             <span>23€</span>
                         </div>
                     </div>
@@ -166,19 +160,17 @@
             </div>
         </section>
 
-        <!-- Section 3 -->
         <section class="container order">
             <div class="order__button"><a href="#"><p>Commander</p></a></div>
         </section>
 
-        <!-- Pied de page -->
         <footer class="container">
             <h1>ohmyfood</h1>
             <ul>
                 <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
                 <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
                 <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="mailto:email@gmail.fr">Contact</a></li>
             </ul>
         </footer>
     </div>
