--- a/pages/menu4.html
+++ b/pages/menu4.html
@@ -5,26 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./public/css/style.css">
-    <title>La palette du goût - Ménilmontant</title>
+    <link rel="stylesheet" href="../public/css/style.css">
+    <title>Le délice des sens - Folie-Méricourt</title>
 </head>
 <body>
     <div class="wrapper">
+
         <!-- En-tête -->
         <header class="container">
             <div class="arrow">
                 <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
             <div class="logo">
-                <img src="./assets/Maquettes/images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+                <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
             </div>
         </header>
 
         <!-- Section 1 -->
         <section class="container illustration">
-            <img class="illustration__image" src="../assets/Maquettes/images/restaurants/img4.jpg" alt="assiette de poisson vue de profil">
+            <img class="illustration__image"src="../assets/images/restaurants/img4.jpg" alt="Assiette de poisson rectangulaire">
             <div class="illustration__body">
-                <h2>La palette du goût</h2>
+                <h2>Le délice des sens</h2>
                 <i class="fas fa-heart"></i>
             </div>
         </section>
@@ -38,9 +39,9 @@
 
                 <article class="menu__card card-1">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Fricassée d'escargot</h4>
+                        <h4 class="menu__card__body__title">Tartare de thon</h4>
                         <div class="menu__card__body__description">
-                            <p>Au piment d'espelette</p>
+                            <p>Assaisonné au yuzu</p>
                             <span>25€</span>
                         </div>
                     </div>
@@ -51,9 +52,9 @@
 
                 <article class="menu__card card-2">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Foie gras de canard mi-cuit</h4>
+                        <h4 class="menu__card__body__title">Bouchée de homard croustillant</h4>
                         <div class="menu__card__body__description">
-                            <p>Et ses copeaux de truffe noire</p>
+                            <p>Et sa farandole de petits légumes</p>
                             <span>35€</span>
                         </div>
                     </div>
@@ -64,9 +65,9 @@
 
                 <article class="menu__card card-3">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Oeuf au plat</h4>
+                        <h4 class="menu__card__body__title">Velouté de cèpes</h4>
                         <div class="menu__card__body__description">
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <p>Aux truffes</p>
                             <span>20€</span>
                         </div>
                     </div>
@@ -82,9 +83,9 @@
 
                 <article class="menu__card card-4">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Filet de boeuf aux herbes</h4>
+                        <h4 class="menu__card__body__title">Poulet rôti aux herbes de Provence</h4>
                         <div class="menu__card__body__description">
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <p>Et sa crème de truffe</p>
                             <span>40€</span>
                         </div>
                     </div>
@@ -95,9 +96,9 @@
 
                 <article class="menu__card card-5">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Parmentier de queue de boeuf</h4>
+                        <h4 class="menu__card__body__title">Langouste rôtie</h4>
                         <div class="menu__card__body__description">
-                            <p>À la truffe noire sur sa purée de panais</p>
+                            <p>Et ses légumes de saison</p>
                             <span>35€</span>
                         </div>
                     </div>
@@ -108,9 +109,9 @@
 
                 <article class="menu__card card-6">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Filet de turbot</h4>
+                        <h4 class="menu__card__body__title">Côte de boeuf Angus</h4>
                         <div class="menu__card__body__description">
-                            <p>Aux agrumes</p>
+                            <p>Et sa purée de panais</p>
                             <span>44€</span>
                         </div>
                     </div>
@@ -126,9 +127,9 @@
 
                 <article class="menu__card card-7">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Paris-Brest</h4>
+                        <h4 class="menu__card__body__title">Farandole de desserts</h4>
                         <div class="menu__card__body__description">
-                            <p>Revisité</p>
+                            <p>Du chef</p>
                             <span>18€</span>
                         </div>
                     </div>
@@ -139,9 +140,9 @@
 
                 <article class="menu__card card-8">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Macaron au chocolat d'exception</h4>
+                        <h4 class="menu__card__body__title">Crème brulée</h4>
                         <div class="menu__card__body__description">
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <p>Revisitée</p>
                             <span>22€</span>
                         </div>
                     </div>
@@ -152,9 +153,9 @@
 
                 <article class="menu__card card-9">
                     <div class="menu__card__body">
-                        <h4 class="menu__card__body__title">Mousse au chocolat</h4>
+                        <h4 class="menu__card__body__title">Tiramisu</h4>
                         <div class="menu__card__body__description">
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <p>À la noisette</p>
                             <span>23€</span>
                         </div>
                     </div>
