--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="loader-spinner">
         <i class="fa fa-spinner"></i>
-        <p>&nbsp; Chargement</p>
+        <p> Chargement</p>
     </div>
 
     <div class="index-content">
@@ -32,8 +32,8 @@
 
         <section class="container search">
             <div class="search__contenu">
-                <h3>Réservez le menu qui vous convient</h3>
-                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                <h3>Réservez le menu qui </br> vous convient</h3>
+                <p id='subtitle'>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 <div class="search__contenu__bouton"><a href="#">
                         <p>Explorer nos restaurants</p>
                     </a></div>
