--- a/pages/menu1.html
+++ b/pages/menu1.html
@@ -160,9 +160,9 @@
             </div>
         </section>
 
-        <section class="container order">
+        <div class="container order">
             <div class="order__button"><a href="#"><p>Commander</p></a></div>
-        </section>
+        </div>
 
         <footer class="container">
             <h1>ohmyfood</h1>
