--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section class="container search">
             <div class="search__contenu">
-                <h3>Réservez le menu qui </br> vous convient</h3>
+                <h3>Réservez le menu qui <br/> vous convient</h3>
                 <p id='subtitle'>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 <div class="search__contenu__bouton"><a href="#">
                         <p>Explorer nos restaurants</p>
